Add deps and update scripts

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "7guis",
+  "homepage": "https://ferueda.github.io/7guis/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -17,6 +18,8 @@
   },
   "scripts": {
     "start": "craco start",
+    "predeploy": "craco build",
+    "deploy": "gh-pages -d build",
     "build": "craco build",
     "test": "craco test",
     "eject": "react-scripts eject"
@@ -38,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
