--- a/package.json
+++ b/package.json
@@ -44,6 +44,10 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.1.0"
+    "@types/node": "^14.14.13",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "gh-pages": "^3.1.0",
+    "typescript": "^4.1.3"
   }
 }
