--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,12 +2,9 @@
   "compilerOptions": {
     "target": "es6",
     "module": "esnext",
-    "lib": [
-      "es6",
-      "dom"
-    ],
+    "lib": ["es6", "dom"],
     "allowJs": true,
-    "jsx": "react-jsx",
+    "jsx": "react",
     "sourceMap": true,
     "outDir": "build",
     "rootDir": "src",
@@ -35,7 +32,5 @@
     "jest",
     "src/setupTests.ts"
   ],
-  "include": [
-    "./src/**/*"
-  ]
+  "include": ["./src/**/*"]
 }
